# ginnastix

./: .gitignore  .prettierrc  LICENSE  README.md  TODO.md  json-format.py  mise.toml  package-lock.json  pyproject.toml
dashboard/: example.py
dashboard/assets/: foo.css
data/: class_sessions.pkl  classes.pkl  holidays.pkl  student_classes.pkl  students.pkl
src/: main.py
src/config/: datasets.py
src/ginnastix_class/: entrypoint.py  notebook.ipynb
src/ginnastix_class/config/: datasets.py  google_sheets.py
src/ginnastix_class/dashboard/: behavior_report.py  color.py
src/ginnastix_class/dashboard/assets/: foo.css  styles.css
src/ginnastix_class/dashboard/behavior_report/: components.py  data.py  main.py
src/ginnastix_class/data_entry/: enter_attendance.py  enter_skills.py  upgrade_tracker.py
src/ginnastix_class/reports/: level_evaluation.py  upgrade_tracker.py
src/ginnastix_class/utils/: google_sheets.py  user_input.py  validation.py
src/utils/: enter_attendance.py  enter_skills.py  enter_stats.py  google_sheets.py  validation.py
tests/utils/: test_google_sheets.py  test_user_input.py  test_validation.py
