[project]
name = "ginnastix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.179.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "pandas>=2.3.1",
]

[dependency-groups]
# uv add --dev ...
dev = [
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.isort]
profile = "black"
force_single_line = true

[tool.ruff]
line-length = 88

