[project]
name = "ginnastix_class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "colorlover>=0.3.0",
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "google-api-python-client>=2.179.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.1",
]

[dependency-groups]
# uv add --dev ...
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/ginnastix_class"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/ginnastix_class/dashboard/assets/*.css",
]

[project.scripts]
ginnastix-class = "ginnastix_class.entrypoint:cli"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.isort]
profile = "black"
force_single_line = true

[tool.ruff]
line-length = 88

